test/compile-fail/import-duplicate.as
import duplicate from "./fixtures/empty";
import duplicate from "./fixtures/empty";
