test/compile-fail/import-duplicate.stderr
[0;37mtest/compile-fail/import-duplicate.as:2.1-42: [0;31merror: [1;37mduplicate import for "./fixtures/empty"[0m
